# VirtualVistaVulkan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VirtualVistaVulkan.sln  capture_settings.cap  renderdoc_capture.rdc
VirtualVistaVulkan/: App.cpp  App.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  CompileShaders.sh  Entity.h  GLFWWindow.cpp  GLFWWindow.h  InputManager.cpp  InputManager.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialTemplate.cpp  MaterialTemplate.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Renderer.cpp  Renderer.h  Resource.h  Scene.cpp  Scene.h  Settings.cpp  Settings.h  Shader.cpp  Shader.h  Utils.cpp  Utils.h  VirtualVistaEngine.cpp  VirtualVistaEngine.h  VirtualVistaVulkan.vcxproj  VirtualVistaVulkan.vcxproj.filters  VulkanBuffer.cpp  (+25 more)
VirtualVistaVulkan/x64/Debug/: vc140.idb
VirtualVistaVulkan/x64/Debug/VirtualV.EFC7A664.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VirtualVistaVulkan.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
assets/models/contemporary_bathroom/: contemporary_bathroom.mtl
assets/models/sponza/: sponza.mtl
assets/shaders/: CompileShaders.sh  PBR_IBL.frag  PBR_IBL.vert  dummy.frag  dummy.vert  phong.frag  phong.vert  shader_info.txt  skybox.frag  skybox.vert  texture.frag  texture.vert  triangle.frag  triangle.vert
include/: Camera.h  DeferredRenderer.h  Entity.h  GLFWWindow.h  InputManager.h  Material.h  MaterialTemplate.h  Mesh.h  Model.h  ModelManager.h  ModelManager.h~RF3966a46e.TMP  Renderer.h  Scene.h  Settings.h  Shader.h  SkyBox.h  TextureManager.h  Utils.h  VirtualVistaEngine.h  VulkanBuffer.h  VulkanDeferredRenderer.h  VulkanDevice.h  VulkanForwardRenderer.h  VulkanImage.h  VulkanImageView.h  VulkanPipeline.h  VulkanRenderPass.h  VulkanRenderer.h  VulkanSampler.h  VulkanShaderModule.h  VulkanSwapChain.h  VulkanTypes.h
src/: Camera.cpp  DeferredRenderer.cpp  Entity.cpp  GLFWWindow.cpp  InputManager.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelManager.cpp  Renderer.cpp  Scene.cpp  Settings.cpp  Shader.cpp  SkyBox.cpp  TextureManager.cpp  VirtualVistaEngine.cpp  VulkanDeferredRenderer.cpp  VulkanForwardRenderer.cpp  VulkanRenderer.cpp  main.cpp
src/Vulkan/: VulkanBuffer.cpp  VulkanDevice.cpp  VulkanImage.cpp  VulkanImageView.cpp  VulkanPipeline.cpp  VulkanRenderPass.cpp  VulkanSampler.cpp  VulkanShaderModule.cpp  VulkanSwapChain.cpp
